--- a/css/login.css
+++ b/css/login.css
@@ -121,3 +121,9 @@
         cursor: pointer;
         margin-right: 10px;
     }
+
+    .test-account-info {
+        display: block;
+        margin: auto;
+        width: 30%; 
+    }
