--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
   
   .topnav {
     overflow: hidden;
-    background-color: rgba(174, 96, 135, 0);
+    background-color: rgba(0, 0, 0, 0);
     border-radius: 10px;
     position: fixed;
     top: 0;
@@ -68,6 +68,13 @@
 
   .leftcolumn, .rightcolumn {
     border: 1px solid black;
+  }
+
+  .column{
+    width: 100%;
+    background-color: rgba(225, 225, 225, 0.6);
+    margin-top: auto;
+    border-radius: 10px;
   }
 
   #calendar {
